Cart media edited

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -157,7 +157,7 @@ p {
   background-position: 5px center;
 }
 .header__cart--visible {
-  display: block;
+  display: flex;
 }
 .header__cart-amount {
   font-size: 15px;
