--- a/css/media.css
+++ b/css/media.css
@@ -410,6 +410,26 @@
     line-height: 1;
     text-transform: uppercase;
   }
+  .card {
+    top: 78px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 20px;
+    padding-bottom: 25px;
+    width: 100%;
+    -webkit-transform: none;
+            transform: none;
+    -webkit-box-shadow: 0px 4px 20px -5px rgba(0, 0, 0, 0.05) inset;
+            box-shadow: 0px 4px 20px -5px rgba(0, 0, 0, 0.05) inset;
+  }
+  .card__close-btn {
+    top: 20px;
+    right: 20px;
+  }
+  .table__data {
+    padding-right: 10px;
+  }
 }
 
 @media (max-height: 505px) {
@@ -489,9 +509,6 @@
   .hero__title {
     max-width: 295px;
     font-size: 36px;
-  }
-  .hero__text {
-    max-width: 256px;
   }
   .process,
   .menu,
@@ -609,6 +626,31 @@
     margin-top: 12px;
     height: 40px;
   }
+  .card {
+    top: 62px;
+  }
+  .card__info {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .card__thumbs {
+    display: none;
+  }
+  .text {
+    margin-left: 0;
+    margin-top: 25px;
+  }
+  .text__description {
+    width: 100%;
+  }
+  .card__images {
+    margin: 0 auto;
+  }
 }
 
 @media (max-width: 568px) {
@@ -690,6 +732,9 @@
   }
   .cart__number {
     width: 101px;
+  }
+  .hero__text {
+    max-width: 256px;
   }
 }
 
