--- a/css/style.css
+++ b/css/style.css
@@ -285,6 +285,10 @@ p {
   background-position: 5px center;
 }
 
+.header__cart-amount {
+  display: none;
+}
+
 .header__cart-name {
   display: none;
 }
@@ -301,7 +305,8 @@ p {
           justify-content: space-between;
 }
 
-.header__cart-amount {
+.header__cart--filled .header__cart-amount {
+  display: block;
   font-size: 15px;
   color: #fff;
 }
@@ -1292,18 +1297,20 @@ p {
 }
 
 .card {
-  display: none;
   position: fixed;
   top: 50%;
   left: 50%;
   -webkit-transform: translateX(-50%) translateY(-50%);
           transform: translateX(-50%) translateY(-50%);
-  padding: 40px 60px 30px;
-  width: 900px;
+  padding: 40px;
+  width: 880px;
   max-width: 100%;
   background-color: #fff;
-  border-radius: 30px;
   z-index: 15;
+}
+
+.card__wrapper {
+  position: relative;
 }
 
 .card__top {
@@ -1329,12 +1336,14 @@ p {
   margin-right: auto;
   padding: 5px 8px;
   background: #ff7a50;
-  border-radius: 6px;
   font-size: 22px;
   color: #fff;
 }
 
 .card__close-btn {
+  position: absolute;
+  right: 40px;
+  top: 40px;
   width: 30px;
   height: 30px;
   background-color: transparent;
@@ -1457,12 +1466,10 @@ p {
   margin-left: auto;
   margin-right: auto;
   padding: 10px;
-  padding-left: 23px;
-  width: 359px;
+  width: 350px;
   max-width: 100%;
   background-color: #fff;
   border: 3px solid #f2f6f7;
-  border-radius: 20px;
 }
 
 .card__price {
@@ -1475,12 +1482,11 @@ p {
   background: #008f99;
   -webkit-box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.04);
           box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.04);
-  border-radius: 16px;
-  border: none;
   font-size: 18px;
   line-height: 1;
   text-transform: uppercase;
   color: #fff;
+  border: none;
   cursor: pointer;
 }
 
@@ -1942,6 +1948,26 @@ body {
     line-height: 1;
     text-transform: uppercase;
   }
+  .card {
+    top: 78px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 20px;
+    padding-bottom: 25px;
+    width: 100%;
+    -webkit-transform: none;
+            transform: none;
+    -webkit-box-shadow: 0px 4px 20px -5px rgba(0, 0, 0, 0.05) inset;
+            box-shadow: 0px 4px 20px -5px rgba(0, 0, 0, 0.05) inset;
+  }
+  .card__close-btn {
+    top: 20px;
+    right: 20px;
+  }
+  .table__data {
+    padding-right: 10px;
+  }
 }
 
 @media (max-height: 505px) {
@@ -2020,9 +2046,6 @@ body {
   .hero__title {
     max-width: 295px;
     font-size: 36px;
-  }
-  .hero__text {
-    max-width: 256px;
   }
   .process,
   .menu,
@@ -2140,6 +2163,31 @@ body {
     margin-top: 12px;
     height: 40px;
   }
+  .card {
+    top: 62px;
+  }
+  .card__info {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .card__thumbs {
+    display: none;
+  }
+  .text {
+    margin-left: 0;
+    margin-top: 25px;
+  }
+  .text__description {
+    width: 100%;
+  }
+  .card__images {
+    margin: 0 auto;
+  }
 }
 
 @media (max-width: 568px) {
@@ -2221,6 +2269,9 @@ body {
   }
   .cart__number {
     width: 101px;
+  }
+  .hero__text {
+    max-width: 256px;
   }
 }
 
