--- a/scss/media.scss
+++ b/scss/media.scss
@@ -370,6 +370,24 @@
     line-height: 1;
     text-transform: uppercase;
   }
+  .card {
+    top: 78px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 20px;
+    padding-bottom: 25px;
+    width: 100%;
+    transform: none;
+    box-shadow: 0px 4px 20px -5px rgba(0, 0, 0, 0.05) inset;
+  }
+  .card__close-btn {
+    top: 20px;
+    right: 20px;
+  }
+  .table__data {
+    padding-right: 10px;
+  }
 }
 @media (max-height: 505px) {
   .footer--visible .footer__social {
@@ -445,9 +463,6 @@
   .hero__title {
     max-width: 295px;
     font-size: 36px;
-  }
-  .hero__text {
-    max-width: 256px;
   }
   .process,
   .menu,
@@ -559,6 +574,26 @@
     margin-top: 12px;
     height: 40px;
   }
+  .card {
+    top: 62px;
+  }
+  .card__info {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .card__thumbs {
+    display: none;
+  }
+  .text {
+    margin-left: 0;
+    margin-top: 25px;
+  }
+  .text__description {
+    width: 100%;
+  }
+  .card__images {
+    margin: 0 auto;
+  }
 }
 @media (max-width: 568px) {
   .stories {
@@ -636,6 +671,9 @@
   }
   .cart__number {
     width: 101px;
+  }
+  .hero__text {
+    max-width: 256px;
   }
 }
 @media (max-width: 330px) {
