--- a/scss/style.scss
+++ b/scss/style.scss
@@ -156,6 +156,9 @@ p {
   background-color: $light-blue;
   background-position: 5px center;
 }
+.header__cart-amount {
+  display: none;
+}
 .header__cart-name {
   display: none;
 }
@@ -164,7 +167,8 @@ p {
   align-items: center;
   justify-content: space-between;
 }
-.header__cart-amount {
+.header__cart--filled .header__cart-amount {
+  display: block;
   font-size: 15px;
   color: #fff;
 }
@@ -944,12 +948,14 @@ p {
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  padding: 40px 60px 30px;
-  width: 900px;
+  padding: 40px;
+  width: 880px;
   max-width: 100%;
   background-color: #fff;
-  border-radius: 30px;
   z-index: 15;
+}
+.card__wrapper {
+  position: relative;
 }
 .card__top {
   display: flex;
@@ -967,11 +973,13 @@ p {
   margin-right: auto;
   padding: 5px 8px;
   background: #ff7a50;
-  border-radius: 6px;
   font-size: 22px;
   color: #fff;
 }
 .card__close-btn {
+  position: absolute;
+  right: 40px;
+  top: 40px;
   width: 30px;
   height: 30px;
   background-color: transparent;
@@ -1060,12 +1068,10 @@ p {
   margin-left: auto;
   margin-right: auto;
   padding: 10px;
-  padding-left: 23px;
-  width: 359px;
+  width: 350px;
   max-width: 100%;
   background-color: #fff;
   border: 3px solid #f2f6f7;
-  border-radius: 20px;
 }
 .card__price {
   @extend %probapro-bold;
@@ -1076,12 +1082,11 @@ p {
   height: 50px;
   background: #008f99;
   box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.04);
-  border-radius: 16px;
-  border: none;
   font-size: 18px;
   line-height: 1;
   text-transform: uppercase;
   color: #fff;
+  border: none;
   cursor: pointer;
 }
 // Product card end
