--- a/css/style.css
+++ b/css/style.css
@@ -33,34 +33,41 @@ body {
 }
 
 .search__item-name, .process__text, .tabs__price, .feedback__text-title, .form__input::-webkit-input-placeholder,
-.form__textarea::-webkit-input-placeholder, .form__btn, .cart__name, .cart__amount-text {
+.form__textarea::-webkit-input-placeholder, .form__btn, .cart__name, .cart__amount-text, .order__summ,
+.order__delivery {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
 .search__item-name, .process__text, .tabs__price, .feedback__text-title, .form__input:-ms-input-placeholder,
-.form__textarea:-ms-input-placeholder, .form__btn, .cart__name, .cart__amount-text {
+.form__textarea:-ms-input-placeholder, .form__btn, .cart__name, .cart__amount-text, .order__summ,
+.order__delivery {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
 .search__item-name, .process__text, .tabs__price, .feedback__text-title, .form__input::-ms-input-placeholder,
-.form__textarea::-ms-input-placeholder, .form__btn, .cart__name, .cart__amount-text {
+.form__textarea::-ms-input-placeholder, .form__btn, .cart__name, .cart__amount-text, .order__summ,
+.order__delivery {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
 .search__item-name, .process__text, .tabs__price, .feedback__text-title, .form__input::placeholder,
-.form__textarea::placeholder, .form__btn, .cart__name, .cart__amount-text {
+.form__textarea::placeholder, .form__btn, .cart__name, .cart__amount-text, .order__summ,
+.order__delivery {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
-.header__list, .search__item-price, .stories__title, .process__text-title, .tabs__name, .feedback__author-name, .form__title, .footer__links, .cart__price, .cart__input, .cart__amount-number, .text__title, .card__price {
+.header__list, .search__item-price, .stories__title, .process__text-title, .tabs__name, .feedback__author-name, .form__title, .footer__links, .cart__price, .cart__input, .cart__amount-number, .text__title, .card__price, .order__title, .personal__title,
+.address__title,
+.date__title,
+.pay__title, .order__amount-price {
   font-family: 'ProbaPro-Bold', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -1492,7 +1499,255 @@ p {
 }
 
 .order {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  padding: 40px 60px;
+  width: 900px;
+  max-width: 100%;
+  height: auto;
+  background-color: #fff;
+  z-index: 20;
+}
+
+.order__wrapper {
+  position: relative;
+}
+
+.order__title {
+  font-size: 30px;
+  line-height: 1;
+  color: #008f99;
+}
+
+.order__close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 20px;
+  height: 20px;
+  background-color: transparent;
+  background-image: url("/images/icons/close.svg");
+  border: none;
+  cursor: pointer;
+}
+
+.personal {
+  margin-top: 30px;
+}
+
+.personal__title,
+.address__title,
+.date__title,
+.pay__title {
+  font-size: 22px;
+  line-height: 1;
+  color: #6cbab8;
+}
+
+.personal__form {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  gap: 15px 87px;
+  margin-top: 20px;
+}
+
+.personal__input {
+  width: 313px;
+  max-width: 100%;
+}
+
+.input {
+  padding: 11px 20px;
+  background-color: #fff;
+  border: 1px solid #6cbab8;
+  font-size: 18px;
+  line-height: 1;
+}
+
+.input::-webkit-input-placeholder {
+  color: #9e9a9a;
+}
+
+.input:-ms-input-placeholder {
+  color: #9e9a9a;
+}
+
+.input::-ms-input-placeholder {
+  color: #9e9a9a;
+}
+
+.input::placeholder {
+  color: #9e9a9a;
+}
+
+.address {
+  margin-top: 40px;
+}
+
+.address__form {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  gap: 15px 20px;
+  margin-top: 20px;
+}
+
+.address__input {
+  width: 100%;
+}
+
+.address__street,
+.address__comment {
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  grid-column-end: 5;
+}
+
+.date {
+  margin-top: 40px;
+}
+
+.date__form {
+  margin-top: 20px;
+}
+
+.date__calendar {
+  padding: 11px 19px;
+  width: 180px;
+  height: 40px;
+  background-color: #fff;
+  border: 1px solid #6cbab8;
+  color: #9e9a9a;
+  font-size: 18px;
+  line-height: 1;
+}
+
+.date__calendar::-webkit-calendar-picker-indicator {
+  background-image: url("/images/icons/calendar.svg");
+}
+
+.date__intervals,
+.pay__methods {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 15px;
+}
+
+.date__input,
+.pay__input {
   display: none;
+}
+
+.date__label,
+.pay__label {
+  display: block;
+  padding: 11px 12px;
+  width: 180px;
+  height: 40px;
+  background-color: #fff;
+  border: 1px solid #6cbab8;
+  color: #9e9a9a;
+  font-size: 18px;
+  line-height: 1;
+  text-align: center;
+  cursor: pointer;
+}
+
+.date__input:checked + .date__label,
+.pay__input:checked + .pay__label {
+  background-color: #008f99;
+  color: #fff;
+}
+
+.pay {
+  margin-top: 40px;
+}
+
+.pay__methods {
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.pay__label {
+  margin-right: 20px;
+}
+
+.order__bottom {
+  margin-top: 40px;
+}
+
+.order__summ {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 20px;
+}
+
+.order__delivery,
+.order__amount {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 15px;
+}
+
+.order__summ,
+.order__delivery {
+  font-size: 22px;
+  line-height: 1;
+}
+
+.order__amount-price {
+  font-size: 30px;
+  line-height: 1;
+  color: #008f99;
+}
+
+.order__btn {
+  display: block;
+  margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 370px;
+  max-width: 100%;
+  height: 60px;
+  background: #008f99;
+  text-transform: uppercase;
+  color: #fff;
+  border: none;
+  -webkit-transition: background 0.3s ease;
+  transition: background 0.3s ease;
+  cursor: pointer;
+}
+
+.order__btn:hover {
+  background: #6cbab8;
 }
 
 body {
@@ -1502,34 +1757,41 @@ body {
 }
 
 .search__item-name, .process__text, .tabs__price, .feedback__text-title, .form__input::-webkit-input-placeholder,
-.form__textarea::-webkit-input-placeholder, .form__btn, .cart__name, .cart__amount-text {
+.form__textarea::-webkit-input-placeholder, .form__btn, .cart__name, .cart__amount-text, .order__summ,
+.order__delivery {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
 .search__item-name, .process__text, .tabs__price, .feedback__text-title, .form__input:-ms-input-placeholder,
-.form__textarea:-ms-input-placeholder, .form__btn, .cart__name, .cart__amount-text {
+.form__textarea:-ms-input-placeholder, .form__btn, .cart__name, .cart__amount-text, .order__summ,
+.order__delivery {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
 .search__item-name, .process__text, .tabs__price, .feedback__text-title, .form__input::-ms-input-placeholder,
-.form__textarea::-ms-input-placeholder, .form__btn, .cart__name, .cart__amount-text {
+.form__textarea::-ms-input-placeholder, .form__btn, .cart__name, .cart__amount-text, .order__summ,
+.order__delivery {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
 .search__item-name, .process__text, .tabs__price, .feedback__text-title, .form__input::placeholder,
-.form__textarea::placeholder, .form__btn, .cart__name, .cart__amount-text {
+.form__textarea::placeholder, .form__btn, .cart__name, .cart__amount-text, .order__summ,
+.order__delivery {
   font-family: 'ProbaPro-Medium', sans-serif;
   font-style: normal;
   font-weight: 500;
 }
 
-.header__list, .search__item-price, .stories__title, .process__text-title, .tabs__name, .feedback__author-name, .form__title, .footer__links, .cart__price, .cart__input, .cart__amount-number, .text__title, .card__price {
+.header__list, .search__item-price, .stories__title, .process__text-title, .tabs__name, .feedback__author-name, .form__title, .footer__links, .cart__price, .cart__input, .cart__amount-number, .text__title, .card__price, .order__title, .personal__title,
+.address__title,
+.date__title,
+.pay__title, .order__amount-price {
   font-family: 'ProbaPro-Bold', sans-serif;
   font-style: normal;
   font-weight: 700;
