Orders style media added

--- a/css/media.css
+++ b/css/media.css
@@ -489,6 +489,40 @@
   .cart__title {
     font-size: 30px;
   }
+  .order {
+    padding: 28px;
+    width: 100%;
+  }
+  .personal__form {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    gap: 15px;
+  }
+  .personal__input {
+    width: 100%;
+  }
+  .date__calendar {
+    padding: 10px 9px;
+    width: calc(50% - 10px);
+  }
+  .date__intervals,
+  .pay__methods {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+  .date__label,
+  .pay__label {
+    width: 100%;
+  }
+  .order__title,
+  .order__amount-price {
+    font-size: 25px;
+  }
+  .order__btn {
+    width: 220px;
+    height: 40px;
+    font-size: 15px;
+  }
 }
 
 @media (max-width: 768px) {
@@ -736,6 +770,21 @@
   .hero__text {
     max-width: 256px;
   }
+  .address__form {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+  .address__street,
+  .address__comment {
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    grid-column-end: 3;
+  }
+  .date__label,
+  .pay__label {
+    padding: 11px 5px;
+    font-size: 16px;
+  }
 }
 
 @media (max-width: 330px) {
@@ -766,5 +815,21 @@
     right: -15px;
     width: 70px;
     height: 70px;
+  }
+  .order {
+    padding: 20px;
+  }
+  .input {
+    padding: 11px 8px;
+    font-size: 15px;
+  }
+  .date__calendar {
+    width: 100%;
+    font-size: 15px;
+  }
+  .date__label,
+  .pay__label {
+    padding: 11px 5px;
+    font-size: 14px;
   }
 }
