--- a/css/media.css
+++ b/css/media.css
@@ -785,6 +785,13 @@
     padding: 11px 5px;
     font-size: 16px;
   }
+  .success__back-btn {
+    width: 220px;
+    height: 40px;
+    font-size: 15px;
+    line-height: 1;
+    padding: 12px;
+  }
 }
 
 @media (max-width: 330px) {
