--- a/css/style.css
+++ b/css/style.css
@@ -1499,7 +1499,7 @@ p {
 }
 
 .order {
-  display: block;
+  display: none;
   position: absolute;
   top: 0;
   left: 50%;
@@ -1744,7 +1744,7 @@ p {
 }
 
 .success {
-  display: none;
+  display: block;
   padding: 100px 40px 40px;
   text-align: center;
 }
@@ -2636,6 +2636,13 @@ body {
   .pay__label {
     padding: 11px 5px;
     font-size: 16px;
+  }
+  .success__back-btn {
+    width: 220px;
+    height: 40px;
+    font-size: 15px;
+    line-height: 1;
+    padding: 12px;
   }
 }
 
