--- a/scss/media.scss
+++ b/scss/media.scss
@@ -626,6 +626,13 @@
   .card__images {
     margin: 0 auto;
   }
+  .tabs__empty {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    font-size: 24px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
 }
 @media (max-width: 568px) {
   .stories {
@@ -726,6 +733,10 @@
     font-size: 15px;
     line-height: 1;
     padding: 12px;
+  }
+  .cart__error {
+    margin-top: 10px;
+    font-size: 15px;
   }
 }
 @media (max-width: 330px) {
