--- a/scss/media.scss
+++ b/scss/media.scss
@@ -569,6 +569,13 @@
   .tabs__price {
     padding: 11px;
     font-size: 18px;
+    height: 40px;
+  }
+  .tabs__remove,
+  .tabs__add {
+    width: 40px;
+    height: 40px;
+    background-size: 40%;
   }
   .instagram__items {
     margin-top: 30px;
