--- a/css/media.css
+++ b/css/media.css
@@ -623,6 +623,13 @@
   .tabs__price {
     padding: 11px;
     font-size: 18px;
+    height: 40px;
+  }
+  .tabs__remove,
+  .tabs__add {
+    width: 40px;
+    height: 40px;
+    background-size: 40%;
   }
   .instagram__items {
     margin-top: 30px;
