--- a/scss/style.scss
+++ b/scss/style.scss
@@ -492,8 +492,7 @@ p {
   align-items: center;
   justify-content: space-between;
   margin-top: auto;
-  width: 260px;
-  max-width: 100%;
+  width: 100%;
 }
 .tabs__input {
   max-width: 50px;
