--- a/css/media.css
+++ b/css/media.css
@@ -678,16 +678,40 @@
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
+    margin-top: 20px;
   }
   .card__thumbs {
     display: none;
   }
+  .card__images {
+    position: relative;
+  }
+  .card__tag {
+    display: none;
+  }
+  .card__mobile-tag {
+    position: absolute;
+    display: block;
+    left: 15px;
+    top: 15px;
+    padding: 5px 8px;
+    background: #ff7a50;
+    font-size: 15px;
+    color: #fff;
+  }
+  .card__close-btn {
+    top: 0;
+    right: 0;
+  }
+  .card__title {
+    font-size: 25px;
+  }
+  .table {
+    font-size: 10px;
+  }
   .text {
     margin-left: 0;
     margin-top: 25px;
-  }
-  .text__description {
-    width: 100%;
   }
   .card__images {
     margin: 0 auto;
@@ -699,6 +723,15 @@
     font-size: 24px;
     margin-top: 30px;
     margin-bottom: 30px;
+  }
+  .send {
+    padding: 55px;
+  }
+  .send__title {
+    font-size: 24px;
+  }
+  .send__btn {
+    margin-top: 30px;
   }
 }
 
@@ -810,6 +843,22 @@
   .cart__error {
     margin-top: 10px;
     font-size: 15px;
+  }
+  .table__title {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .card__text {
+    margin-top: 10px;
+  }
+  .text__description {
+    margin-top: 10px;
+  }
+  .table {
+    margin-top: 20px;
+  }
+  .card__bottom {
+    margin-top: 30px;
   }
 }
 
