--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ body {
   font-weight: 500;
 }
 
-.header__list, .search__item-price, .stories__title, .process__text-title, .tabs__name, .feedback__author-name, .form__title, .footer__links, .cart__price, .cart__input, .cart__amount-number, .text__title, .card__price, .personal__title,
+.header__list, .search__item-price, .stories__title, .process__text-title, .tabs__name, .feedback__author-name, .form__title, .send__title, .footer__links, .cart__price, .cart__input, .cart__amount-number, .text__title, .card__price, .personal__title,
 .address__title,
 .date__title,
 .pay__title, .order__amount-price, .success__thanks {
@@ -1048,6 +1048,28 @@ p {
   background-color: #6cbab8;
 }
 
+.send {
+  width: 480px;
+  max-width: 100%;
+  padding: 80px;
+  padding-top: 58px;
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(255, 255, 255, 0.2)), to(rgba(255, 255, 255, 0.2)));
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2));
+  border: 1px solid #def1ee;
+  text-align: center;
+}
+
+.send__title {
+  margin-top: 30px;
+  font-size: 36px;
+  line-height: 1.3;
+  color: #008f99;
+}
+
+.send__btn {
+  margin-top: 60px;
+}
+
 .footer {
   margin-top: 120px;
   padding: 38px 0 39px;
@@ -1381,7 +1403,6 @@ p {
 }
 
 .card {
-  display: none;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -1558,7 +1579,9 @@ p {
 }
 
 .card__price {
+  margin-right: 10px;
   line-height: 1;
+  white-space: nowrap;
 }
 
 .card__btn {
@@ -1573,6 +1596,10 @@ p {
   color: #fff;
   border: none;
   cursor: pointer;
+}
+
+.card__mobile-tag {
+  display: none;
 }
 
 .order {
@@ -1911,7 +1938,7 @@ body {
   font-weight: 500;
 }
 
-.header__list, .search__item-price, .stories__title, .process__text-title, .tabs__name, .feedback__author-name, .form__title, .footer__links, .cart__price, .cart__input, .cart__amount-number, .text__title, .card__price, .personal__title,
+.header__list, .search__item-price, .stories__title, .process__text-title, .tabs__name, .feedback__author-name, .form__title, .send__title, .footer__links, .cart__price, .cart__input, .cart__amount-number, .text__title, .card__price, .personal__title,
 .address__title,
 .date__title,
 .pay__title, .order__amount-price, .success__thanks {
@@ -2605,16 +2632,40 @@ body {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
+    margin-top: 20px;
   }
   .card__thumbs {
     display: none;
   }
+  .card__images {
+    position: relative;
+  }
+  .card__tag {
+    display: none;
+  }
+  .card__mobile-tag {
+    position: absolute;
+    display: block;
+    left: 15px;
+    top: 15px;
+    padding: 5px 8px;
+    background: #ff7a50;
+    font-size: 15px;
+    color: #fff;
+  }
+  .card__close-btn {
+    top: 0;
+    right: 0;
+  }
+  .card__title {
+    font-size: 25px;
+  }
+  .table {
+    font-size: 10px;
+  }
   .text {
     margin-left: 0;
     margin-top: 25px;
-  }
-  .text__description {
-    width: 100%;
   }
   .card__images {
     margin: 0 auto;
@@ -2626,6 +2677,15 @@ body {
     font-size: 24px;
     margin-top: 30px;
     margin-bottom: 30px;
+  }
+  .send {
+    padding: 55px;
+  }
+  .send__title {
+    font-size: 24px;
+  }
+  .send__btn {
+    margin-top: 30px;
   }
 }
 
@@ -2737,6 +2797,22 @@ body {
   .cart__error {
     margin-top: 10px;
     font-size: 15px;
+  }
+  .table__title {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .card__text {
+    margin-top: 10px;
+  }
+  .text__description {
+    margin-top: 10px;
+  }
+  .table {
+    margin-top: 20px;
+  }
+  .card__bottom {
+    margin-top: 30px;
   }
 }
 
