--- a/scss/style.scss
+++ b/scss/style.scss
@@ -708,6 +708,7 @@ p {
   );
   border: 1px solid #def1ee;
 }
+
 .form__input {
   margin-top: 40px;
   padding: 11px 20px;
@@ -756,6 +757,29 @@ p {
 }
 .form__btn:hover {
   background-color: $light-blue;
+}
+.send {
+  width: 480px;
+  max-width: 100%;
+  padding: 80px;
+  padding-top: 58px;
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 0.2),
+    rgba(255, 255, 255, 0.2)
+  );
+  border: 1px solid #def1ee;
+  text-align: center;
+}
+.send__title {
+  margin-top: 30px;
+  @extend %probapro-bold;
+  font-size: 36px;
+  line-height: 1.3;
+  color: $dark-blue;
+}
+.send__btn {
+  margin-top: 60px;
 }
 // About us end
 
@@ -1003,7 +1027,6 @@ p {
 
 // Product card start
 .card {
-  display: none;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -1134,8 +1157,10 @@ p {
   border: 3px solid #f2f6f7;
 }
 .card__price {
+  margin-right: 10px;
   @extend %probapro-bold;
   line-height: 1;
+  white-space: nowrap;
 }
 .card__btn {
   width: 246px;
@@ -1148,6 +1173,9 @@ p {
   color: #fff;
   border: none;
   cursor: pointer;
+}
+.card__mobile-tag {
+  display: none;
 }
 // Product card end
 
