--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -51,7 +51,7 @@ p {
   bottom: 0;
   right: 0;
   background: rgba(65, 64, 66, 0.5);
-  z-index: 12;
+  z-index: 13;
 }
 .overlay--active {
   display: block;
@@ -248,6 +248,7 @@ p {
 }
 .stories__items {
   padding: 10px;
+  height: 300px;;
 }
 .stories__item {
   position: relative;
