--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -251,13 +251,12 @@ p {
 }
 .stories__items {
   padding: 10px;
-  height: 300px;;
 }
 .stories__item {
   position: relative;
   flex: 0 0 280px;
-  width: 280px;
-  height: 280px;
+  min-width: 280px;
+  min-height: 280px;
   border-radius: 30px;
   object-fit: cover;
   cursor: pointer;
@@ -1199,18 +1198,20 @@ p {
 .order__modal {
   position: fixed;
   max-height: 100vh;
-  max-width: 100vw;
+  max-width: 900px;
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   z-index: 20;
+  left: 50%;
+  transform: translateX(-50%);
 }
 .order {
   position: relative;
   padding: 40px 60px;
-  width: 900px;
+  width: 100%;
   height: 100%;
   background-color: #fff;
   overflow-y: auto;
