--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1041,6 +1041,7 @@ p {
   max-width: 100%;
   background-color: #fff;
   z-index: 15;
+  overflow-y: auto;
 }
 .card__wrapper {
   position: relative;
