--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -384,6 +384,8 @@
   .card__close-btn {
     top: 20px;
     right: 20px;
+    width: 20px;
+    height: 20px;
   }
   .table__data {
     padding-right: 10px;
