--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -78,7 +78,7 @@ p {
   padding: 16px 0;
   background: #ffffff;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
-  z-index: 12;
+  z-index: 13;
 }
 .header__inner {
   display: flex;
@@ -369,6 +369,9 @@ p {
 // Process end
 
 // Menu start
+.main__menu .menu{
+  padding-top: 60px;
+}
 .menu,
 .feedback {
   padding-top: 120px;
@@ -1040,7 +1043,7 @@ p {
   width: 880px;
   max-width: 100%;
   background-color: #fff;
-  z-index: 15;
+  z-index: 13;
   overflow-y: auto;
 }
 .card__wrapper {
@@ -1213,7 +1216,7 @@ p {
   position: relative;
   padding: 40px 60px;
   width: 100%;
-  height: 100%;
+  max-height: 100%;
   background-color: #fff;
   overflow-y: auto;
   z-index: 20;
