--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -55,7 +55,7 @@
     background-size: cover;
   }
   .stories__item + .stories__item {
-    margin-left: 16px;
+    margin-left: 16px!important;
   }
   .stories__item--active {
     box-shadow: 0px 0px 0px 2px #fff, 0px 0px 0px 5px #ff7a50;
@@ -693,7 +693,7 @@
     font-size: 10px;
   }
   .stories__item + .stories__item {
-    margin-left: 7px;
+    margin-left: 7px!important;
   }
   .stories__item--active + .stories__item--active {
     margin-left: 10px;
