fix: style and footer text

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -249,6 +249,9 @@ p {
   margin-top: 90px;
   overflow-x: hidden;
 }
+.stories__wrapper {
+  margin-top: 0!important;
+}
 .stories__items {
   padding: 10px;
 }
